// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockedCvxDelegationAction handles badger delegated state 1`] = `
<div>
  <p
    class="MuiTypography-root-3 makeStyles-badgerDelegated-1 MuiTypography-body1-5 MuiTypography-colorPrimary-26"
  >
    You delegated your locked CVX to Badger. Thanks, you're a top badger!
  </p>
</div>
`;

exports[`LockedCvxDelegationAction handles delegated state 1`] = `
<div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-3 MuiButton-contained-11 makeStyles-linkButton-2 MuiButton-containedPrimary-12 MuiButton-containedSizeSmall-22 MuiButton-sizeSmall-24 MuiButton-disabled-16 MuiButtonBase-disabled-33"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label-4"
    >
      Click here to delegate your locked CVX balance to Badger
    </span>
  </button>
</div>
`;

exports[`LockedCvxDelegationAction handles eligible state 1`] = `
<div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-3 MuiButton-contained-11 makeStyles-linkButton-2 MuiButton-containedPrimary-12 MuiButton-containedSizeSmall-22 MuiButton-sizeSmall-24"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-4"
    >
      Click here to delegate your locked CVX balance to Badger
    </span>
    <span
      class="MuiTouchRipple-root-35"
    />
  </button>
</div>
`;

exports[`LockedCvxDelegationAction handles ineligible state 1`] = `
<div>
  <span
    class=""
    title="You don't have any locked CVX balance to delegate."
  >
    <button
      class="MuiButtonBase-root-43 MuiButton-root-14 MuiButton-contained-22 makeStyles-linkButton-2 MuiButton-containedPrimary-23 MuiButton-containedSizeSmall-33 MuiButton-sizeSmall-35 MuiButton-disabled-27 MuiButtonBase-disabled-44"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label-15"
      >
        Click here to delegate your locked CVX balance to Badger
      </span>
    </button>
  </span>
</div>
`;
